# AceCG

./: README.md  environment.yml  pyproject.toml  requirements.txt  s
.github/workflows/: publish.yml
configs/templates/: README.md  cdfm_prod.acg  cdrem_prod.acg  fm_prod.acg  rem_prod.acg  tutorial.acg
documentation/: README.md
documentation/developer_guide/: 00_architecture.md  01_potentials.md  02_topology.md  03_compute.md  04_mpi_runtime.md  05_solvers.md  06_optimizers.md  07_trainers.md  08_schedulers.md  09_workflows.md  10_vp_grower.md  11_io_utilities.md
examples/: README.md
src/: README.md
src/AceCG/: PACKAGE_STRUCTURE.md  __init__.py
src/AceCG/analysis/: __init__.py  rdf.py
src/AceCG/compute/: __init__.py  energy.py  force.py  frame_geometry.py  mpi_engine.py  reducers.py  registry.py  vp_prepare.py
src/AceCG/configs/: __init__.py  models.py  parser.py  utils.py  vp_config.py  vp_growth_config.py
src/AceCG/fitters/: __init__.py  base.py  fit_bspline.py  fit_harmonic.py  fit_multi_gaussian.py  utils.py
src/AceCG/io/: __init__.py  coordinates.py  coordinates_writers.py  forcefield.py  logger.py  tables.py  trajectory.py  vp_ffbuilder.py
src/AceCG/optimizers/: adam.py  adamW.py  base.py  newton_raphson.py  rmsprop.py
src/AceCG/potentials/: __init__.py  base.py  bspline.py  gaussian.py  harmonic.py  lennardjones.py  lennardjones96.py  lennardjones_soft.py  multi_gaussian.py  soft.py  srlrgaussian.py  unnormalized_multi_gaussian.py
src/AceCG/samplers/: __init__.py  _lammps_script.py  _script_inspector.py  base.py  conditioned.py
(+57 files in other folders)
