[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "AceCG"
version = "0.26.4.20"
description = "AceCG: A Comprehensive and Efficient Coarse-Graining Engine"
requires-python = ">=3.9"
dependencies = [
    "MDAnalysis>=2.4",
    "mpi4py>=3.1",
    "numpy>=1.23",
    "PyYAML>=6.0",
    "scipy>=1.10",
    "typing_extensions>=4.0; python_version < '3.11'",
]

[project.optional-dependencies]
numba = [
    "numba>=0.59",
]

[project.scripts]
acg-fm = "AceCG.workflows.fm:main"
acg-rem = "AceCG.workflows.rem:main"
acg-cdfm = "AceCG.workflows.cdfm:main"
acg-cdrem = "AceCG.workflows.cdrem:main"
acg-vpgrower = "AceCG.workflows.vp_growth:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-dir]
"" = "src"
